feat(rules): finish phase 4 title/episode_title; widen YML parity gate
All 798 unit tests green. YML parity widened to phase 4 props
(title, alternative_title, episode_title, type); current pass rate
70.7% (492/1678 fail), target ≥95% — top failure clusters tracked
in memory for follow-up.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>